# Working-with-Web-Data

./: LICENSE  README.md  datasummary.py  edawebapi.py  pyproject.toml  webscrapping.py
.ipynb_checkpoints/: pyproject-checkpoint.toml  scraping-checkpoint.ipynb
src/: __main__.py
src/Working_with_Web_Data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/web_scraping/: __main__.py  webapi.py  xmlparser.py
