[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Working-with-Web-Data"
authors = [{name = "Nikki Rastogi", email = "nrastog1@mail.yu.edu"}]
version = "0.1.0"
description = "web scraping through xml parser, beautifulsoup4"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.4",
    "numpy>=1.21",
    "pandas>=1.3",
    "seaborn>=0.11",
    "urllib3>=1.26",
    "beautifulsoup4>=4.10", 
    "requests>=2.27",
    "lxml>=4.6",
    "html5lib>=1.1",
    ]

[project.urls]
homepage = "https://github.com/nikkirastogi"
repository = "https://github.com/nikkirastogi/Working-with-Web-Data/tree/main/src"
documentation = "https://github.com/nikkirastogi/Working-with-Web-Data/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]